--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -47,3 +47,13 @@ nav {
 .user-update-form {
   display: none;
 }
+
+.edit-todo-form {
+  display: none;
+}
+.todo-list-item {
+  border-bottom: solid 1px #eee;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+}
